# backup-helper

./: README.md  flow.html  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: build-win7-adhoc.yml  release.yml
.serena/: project.yml
docs/: architecture-v2.html  workflow-v03.html
docs/superpowers/plans/: 2026-07-18-v03-reconnect-approval.md
docs/superpowers/specs/: 2026-07-18-v03-reconnect-approval-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  config.rs  engine.rs  lib.rs  logger.rs  main.rs  v2.rs
src-tauri/src/sync/: cloud.rs  db.rs  diff.rs  mod.rs  scan.rs  store.rs  types.rs
ui/: index.html  main.js  style.css  v2.js
