[package]
name = "backup-helper"
version = "0.2.0"
description = "App sao lưu file tự động"
authors = ["agooddaytowork"]
edition = "2021"

[lib]
name = "backup_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"
walkdir = "2"
chrono = { version = "0.4", features = ["clock"] }
filetime = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
