[package]
name = "backup-helper"
version = "0.3.0"
description = "App sao lưu file tự động (bản legacy Windows 7 / Server 2008 R2)"
authors = ["agooddaytowork"]
edition = "2021"

[lib]
name = "backup_helper_lib"
crate-type = ["rlib"]

[features]
# Bắt buộc cho Tauri v1: `tauri build` chạy với --features custom-protocol
# (bản production nạp asset qua custom protocol thay vì dev server).
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "dialog"] }
auto-launch = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-mini = "0.4"
walkdir = "2"
chrono = { version = "0.4", features = ["clock"] }
filetime = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
